Fix horizontal scrolling on the product page when the screen size is < 1450px

--- a/admin-dev/themes/new-theme/scss/pages/_product_page.scss
+++ b/admin-dev/themes/new-theme/scss/pages/_product_page.scss
@@ -209,8 +209,9 @@
   }
 
   .summary-description-container {
+    overflow: hidden; // fixes horizontal scrolling on the product page
     .nav-tabs {
-      overflow: hidden;
+      overflow: hidden; // fixes tab borders bleeding into the tab content
 
       &.bordered {
         .nav-link {
